@@ -2,6 +2,12 @@ fidoconfig 0.9
 --------------
 
 ----- cvs ci ------
+Wed Aug 11 02:20:37 NOVST 1999
+max:
++ added carbonSubj and carbonText tokens
++ added carbonAndQuit token
+	
+----- cvs ci ------
 Mon Aug  9 15:34:24 NOVST 1999
 max:
 + added token for Hash Dupes by Oleg Zrozhevsky 
